# captcha-ark

./: .gitignore  ARCHITECTURE.md  CONFIGURATION.md  Cargo.toml  DEPLOYMENT.md  FLOW.md  README.md
launchpad-app/: .env.example  README.md  config-overrides.js  package-lock.json  package.json
launchpad-app/public/: index.html
launchpad-app/src/: App.css  App.tsx
launchpad-backend/: .env.example  package-lock.json  package.json  server.js
launchpad-frontend/: index.html
src/: main.rs
token-sale-contract/: Cargo.toml
token-sale-contract/src/: lib.rs
