[package]
name = "captcha-ark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "captcha-ark"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
